--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ div.background div.g-3 {
 }
 
 header {
-  height: 60px;
+  height: 80px;
   animation: headerSt 1s forwards ease;
   display: flex;
   justify-content: space-evenly;
@@ -147,14 +147,65 @@ header {
   right: 0;
   left: 0;
   z-index: 1;
+  background-color: var(--tB, rgba(0, 0, 0, 0.5));
 }
 
 header.up-down {
   top: -60px;
+  background-color: transparent;
 }
 
-header div.co-dark-mode {
+header div.co-menu-dark {
   width: 250px;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+header div.co-menu-dark>button {
+  display: none;
+  font-size: 2.5rem;
+  cursor: pointer;
+  margin-right: 20px;
+  color: var(--white, white);
+}
+
+header div.co-menu-dark div.box-menu {
+  width: 300px;
+  height: 120vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  transform: translateX(300px);
+  transition: all 0.5s ease;
+  z-index: 1100;
+  background-color: var(--white, white);
+}
+
+header div.co-menu-dark div.box-menu.active {
+  transform: translateX(0px);
+}
+
+header div.co-menu-dark div.box-menu button {
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+header div.co-menu-dark div.box-menu nav {}
+
+header div.co-menu-dark div.box-menu nav ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+
+header div.co-menu-dark div.box-menu nav ul li {}
+
+header div.co-menu-dark div.box-menu nav ul li a {
+  height: 50px;
+  font-size: 1rem;
 }
 
 /* From Uiverse.io by Pradeepsaranbishnoi */
@@ -227,27 +278,73 @@ header div.co-dark-mode {
 
 
 
-header nav {}
+header>nav {}
 
-header nav ul {
-  width: 500px;
+header>nav ul {
+  width: 700px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
-header nav ul li {
+header>nav ul li {
   list-style: none;
 }
 
-header nav ul li a {
+header>nav ul li a {
   font-size: 1rem;
   text-decoration: none;
+  color: var(--white, white);
   font-family: "Noto Kufi Arabic", serif;
   /* Arabic */
 }
 
-body.active header nav ul li a {
+header>nav ul li a.subscription {
+  animation: gradient-move 3s alternate infinite ease !important;
+  color: transparent !important;
+  background-clip: text !important;
+  background-color: var(--c4158D0, #4158D0) !important;
+  background-image: linear-gradient(43deg, var(--c4158D0, #4158D0) 0%, var(--cC850C0, #C850C0) 46%, var(--cFFCC70, #FFCC70) 100%) !important;
+}
+
+header>nav ul li a.Login {
+  width: 120px;
+  height: 40px;
+  animation: gradient-move 3s alternate infinite ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s ease;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
   color: var(--white, white);
+  background-color: var(--c4158D0, #4158D0);
+  background-image: linear-gradient(43deg, var(--c4158D0, #4158D0) 0%, var(--cC850C0, #C850C0) 46%, var(--cFFCC70, #FFCC70) 100%);
+  font-family: "Noto Kufi Arabic", serif;
+  /* Arabic */
+}
+
+header>nav ul li a.Login:hover {
+  box-shadow: 0 0 50px 0px var(--c2AF598, #2AF598);
+}
+
+header>nav ul li a.Login::before {
+  content: "تسجيل دخول";
+  width: calc(100% - 4px);
+  height: calc(100% - 4px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  border-radius: 3px;
+  color: var(--black, black);
+  background-color: var(--white, white);
+}
+
+body.active header>nav ul li a.Login::before {
+  color: var(--white, white);
+  background-color: var(--black, black);
 }
 
 header div.box-logo {
@@ -269,6 +366,28 @@ header div.box-logo img {
   to {
     opacity: 1;
     transform: translateY(0px);
+  }
+}
+
+@media (max-width: 1000px) {
+  header {
+    justify-content: space-between;
+  }
+
+  header div.co-menu-dark>button {
+    display: block;
+  }
+
+  header nav {
+    display: none;
+  }
+
+  header div.box-logo {
+    justify-content: flex-end;
+  }
+
+  header div.box-logo img {
+    margin-left: 20px;
   }
 }
 
@@ -341,6 +460,7 @@ main div.box-int button {
   transition: all 0.5s ease;
   border-radius: 5px;
   font-size: 1rem;
+  margin-top: 20px;
   cursor: pointer;
   color: var(--white, white);
   background-color: var(--c4158D0, #4158D0);
@@ -354,7 +474,7 @@ body.active main div.box-int button:hover {
 }
 
 main div.box-int button::after {
-  content: "ابدا";
+  content: "تعريف";
   width: calc(100% - 4px);
   height: calc(100% - 4px);
   display: flex;
@@ -376,6 +496,7 @@ body.active main div.box-int button::after {
   width: 200px;
   height: 200px;
   perspective: 800px;
+  animation: square 1s forwards ease;
 }
 
 .cube {
@@ -452,7 +573,7 @@ body.active main div.box-int button::after {
   }
 }
 
-@keyframes box-image {
+@keyframes square {
   from {
     opacity: 0;
     transform: translateX(-700px);
@@ -471,6 +592,18 @@ body.active main div.box-int button::after {
 
   to {
     filter: hue-rotate(360deg);
+  }
+}
+
+@media (max-width: 1000px) {
+  main {
+    flex-direction: column-reverse;
+  }
+}
+
+@media (max-width: 600px) {
+  main div.box-int {
+    width: 90%;
   }
 }
 
@@ -780,7 +913,28 @@ body.active div.Robot div.box-Robot div.box-robot-talk div.box-name button {
   }
 }
 
+@media (max-width: 600px) {
+  div.Robot div.box-Robot div.box-robot-talk {
+    top: 110%;
+    left: 50%;
+  }
+
+  div.Robot div.box-Robot div.box-robot-talk::before {
+    content: "";
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: -20px;
+    right: 20px;
+    transform: rotate(0deg);
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-bottom: 20px solid var(--ceee, #eee);
+  }
+}
+
 section.sec-1 {
+  overflow: hidden;
   margin-top: 50px;
 }
 
@@ -813,22 +967,10 @@ section.sec-1 div.box-videos {
   gap: 20px;
 }
 
-@media (max-width: 1500px) {
-  section.sec-1 div.box-videos {
-    grid-template-columns: repeat(2, 500px);
-  }
-}
-
-@media (max-width: 1000px) {
-  section.sec-1 div.box-videos {
-    grid-template-columns: repeat(1, 500px);
-  }
-}
-
 section.sec-1 div.box-videos iframe {
   width: 500px;
   border-radius: 10px;
-  box-shadow: 0 0 15px 0px var(--tB, rgba(0,0,0,0.5));
+  box-shadow: 0 0 15px 0px var(--tB, rgba(0, 0, 0, 0.5));
 }
 
 section.sec-1 div.box-videos iframe:nth-child(1) {
@@ -838,17 +980,33 @@ section.sec-1 div.box-videos iframe:nth-child(1) {
   grid-row: 1/3;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 1600px) {
+  section.sec-1 div.box-videos {
+    grid-template-columns: repeat(2, 500px);
+  }
+
   section.sec-1 div.box-videos iframe:nth-child(1) {
     height: 500px;
+    grid-column: 1/3;
+    grid-row: 1/4;
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
+  section.sec-1 div.box-videos {
+    width: 100%;
+    grid-template-columns: repeat(1, 100%);
+  }
+
+  section.sec-1 div.box-videos iframe {
+    width: 90%;
+    height: 500px;
+  }
+
   section.sec-1 div.box-videos iframe:nth-child(1) {
-    grid-column: 2/1;
-    grid-row: 2/1;
-    height: 300px;
+    width: 90%;
+    grid-column: 1/1;
+    grid-row: 1/1;
   }
 }
 
